--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
+        "illuminate/config": "4.2.*",
         "guzzle/guzzle": "3.8.1"
     },
     "autoload": {
